# trading

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =14.0.0  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  Makefile  alembic.ini  chrome  pyproject.toml  requirements.txt  runtests에러.txt
.claude/: plan-admin-redesign.md
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_backtest_runs.py  003_local_auth.py  004_trading_combos.py  005_backtest_combos.py  006_reserve_pool_redesign.py  007_buy_pause.py  008_candle_tables.py  009_combo_symbols.py  010_candle_volume_columns.py  011_create_remaining_candle_tables.py  012_fix_timezone_columns.py  013_performance_indexes.py  014_admin_sort_indexes.py  015_fills_account_symbol_index.py  016_auto_recovery_columns.py  017_reconciliation_logs.py  018_persistent_logs_and_daily_reports.py  019_add_persistent_log_account_fk.py  020_add_fills_covering_index.py  021_merge_dust_lots_and_unique_buy_order.py  022_remerge_dust_lots_with_sell_orders.py  023_add_discord_sent_at.py  024_indexes_and_check_constraints.py  025_add_paper_trading_columns.py
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  accounts.py  admin.py  admin_accounts.py  admin_db.py  admin_trading.py  admin_users.py  auth.py  backtest.py  combos.py  dashboard.py  debug.py  health.py  logs.py  metrics.py  reports.py  strategies.py  user.py
app/backtest/: isolated_runner.py  mem_stores.py
app/dashboard/: __init__.py  routes.py
app/db/: account_repo.py  lot_repo.py  order_repo.py  position_repo.py  price_repo.py  repository.py  session.py  strategy_state_repo.py
app/exchange/: __init__.py  backtest_client.py  base_client.py  binance_client.py  faulty_backtest_client.py
app/middleware/: auth.py  auth_middleware.py  csrf_middleware.py  metrics_middleware.py  no_cache_html.py  request_id.py  security_headers.py
app/models/: __init__.py  account.py  backtest_run.py  base.py  core_btc_history.py  daily_report.py  fill.py  lot.py  order.py  persistent_log.py  position.py  price_candle.py  price_snapshot.py  reconciliation_log.py  strategy_config.py  strategy_state.py  trading_combo.py  user.py
app/schemas/: __init__.py  account.py  auth.py  backtest.py  common.py  dashboard.py  health.py  settings.py  strategy.py  trade.py
app/services/: __init__.py  account_service.py  account_state_manager.py  account_trader.py  (+14 more)
backtest/: isolated_runner.py  mem_stores.py  runner.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: 00.PROJECT_STRUCTURE.md  02.PLANNER.md  03.STRATEGY_CUSTOMIZATION_PLAN.md  04.ACCOUNT_PLAN.md  05.BUY_SELL_SPLIT_PLAN.md  06.PRE_PRODUCTION_PLAN.md  07.OCI_DEPLOY_PLAN.md  FULL_REVIEW_2026-03-02.md  LOG_REFERENCE.html  LOG_REFERENCE.md  PROJECT_STRUCTURE.md  SECRET_ROTATION_GUIDE.md  buy-plan-calculator.html  erd.dbml  system_health_guide.md
scripts/: backup_db.sh  create_admin.py  fetch_klines.py  migrate_from_old.py  migrate_strategy_to_combo.py  monitor-hook.mjs  preview_ui.py  rotate_encryption_key.py
systemd/: crypto-multi-trader.service
tests/: conftest.py
(+86 files in other folders)
